--- a/src/assignment4/ProjectE/ProjectE.csproj
+++ b/src/assignment4/ProjectE/ProjectE.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -12,12 +12,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\ProjectCommon\ProjectCommon.csproj" />
-    <ProjectReference Include="..\ProjectD\ProjectD.csproj" />
-    <ProjectReference Include="..\ProjectE\ProjectE.csproj" />
   </ItemGroup>
 
 </Project>
