--- a/CSharp_Assignments_Phase2/ExpenseTrackerConsoleApplication/ExpenseTrackerConsoleApplication.csproj
+++ b/CSharp_Assignments_Phase2/ExpenseTrackerConsoleApplication/ExpenseTrackerConsoleApplication.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="ConsoleTables" Version="2.6.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="7.0.1" />
   </ItemGroup>
 
